# Booru-Pictag-Get-MCP

./: .gitignore  AIGC_NOTICE.md  LICENSE  README.md  pyproject.toml
data/: tag_conflicts_overrides.example.json
scripts/: dump_tag_categories.py  inspect_tag_conflicts.py
src/booru_pictag_get_mcp/: __init__.py  constants.py  data.py  models.py  server.py
src/booru_pictag_get_mcp/core/: __init__.py  background.py  clean_prompt.py  normalize.py  tag_classifier.py  tag_conflicts.py
src/booru_pictag_get_mcp/providers/: __init__.py  base.py  factory.py  httpclient.py  transforms.py
tests/: test_core.py  test_live.py
