[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "booru-pictag-get-mcp"
version = "0.1.0"
description = "MCP server that searches booru posts and cleans tags into ready-to-use AI art prompts (Danbooru/Gelbooru/e621/AIBooru/Rule34)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "echo-xianyu" },
]
keywords = ["mcp", "booru", "danbooru", "ai-art", "stable-diffusion", "prompt", "tags"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
# HTTP/2 is required for some providers (notably e621, whose TLS stack errors
# out on HTTP/1.1 keep-alive). Install this extra to enable it; the HTTP client
# auto-detects h2 and falls back to HTTP/1.1 if absent.
http2 = ["h2>=4.0.0"]
color = ["pillow>=10.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
booru-pictag-get-mcp = "booru_pictag_get_mcp.server:main"

[project.urls]
Homepage = "https://github.com/echo-xianyu/Booru-Pictag-Get-MCP"
Source = "https://github.com/echo-xianyu/Booru-Pictag-Get-MCP"
Upstream = "https://github.com/Mexes-GM/booru-prompt-gallery"
Issues = "https://github.com/echo-xianyu/Booru-Pictag-Get-MCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/booru_pictag_get_mcp"]

[tool.hatch.build.targets.wheel.force-include]
# (conditional — file only required for Gelbooru/Rule34 enrichment; if absent
#  the server still runs and falls back to keyword classification. The data
#  file is generated by scripts/dump_tag_categories.py)
# If you've dumped it locally, uncomment the next lines to bundle it.
# "data/tag_categories.json" = "booru_pictag_get_mcp/data/tag_categories.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"